log
Thu 21 Mar 2024 03:22:29 PM UTC: 
 tests:  0|5
total_score: 0/70
fdbfc76
Thu 21 Mar 2024 03:26:35 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:7: error: invalid type argument of unary ‘*’ (have ‘int’)
   49 |       *valor = malloc(sizeof(int));
      |       ^~~~~~
exercises.c:50:15: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
   50 |       push(L, valor);
      |               ^~~~~
      |               |
      |               int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:52:17: error: expected expression before ‘List’
   52 |   imprime_lista(List *L);
      |                 ^~~~
cc1: all warnings being treated as errors
Compilation failed
54e1434
Thu 21 Mar 2024 03:26:46 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   49 |       valor = malloc(sizeof(int));
      |             ^
exercises.c:50:15: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
   50 |       push(L, valor);
      |               ^~~~~
      |               |
      |               int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
In file included from test.c:5:
exercises.c:52:17: error: expected expression before ‘List’
   52 |   imprime_lista(List *L);
      |                 ^~~~
cc1: all warnings being treated as errors
Compilation failed
3988773
Thu 21 Mar 2024 03:27:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:13: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   49 |       valor = malloc(sizeof(int));
      |             ^
exercises.c:50:7: error: invalid type argument of unary ‘*’ (have ‘int’)
   50 |       *valor = i;
      |       ^~~~~~
exercises.c:51:15: error: passing argument 2 of ‘push’ makes pointer from integer without a cast [-Werror=int-conversion]
   51 |       push(L, valor);
      |               ^~~~~
      |               |
      |               int
In file included from exercises.c:7,
                 from test.c:5:
stack.h:11:31: note: expected ‘void *’ but argument is of type ‘int’
   11 | void push(Stack *stack, void *data) { pushFront(stack, data); }
      |                         ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
74e688f
Thu 21 Mar 2024 03:27:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
9487ae4
